Minor tweaks from FindBugs report
git-svn-id: http://svn.littleshoot.org/svn/littleshoot/trunk/common/ice@1085 8d7aff80-242d-0410-bcee-ed6f15385b3d